# Babel

./: .gitignore  CMakeLists.txt  Documentation BABEL.docx  README.md  conanfile.txt
TestOpusAndPortaudio/: .gitignore  Opus.cpp  Opus.hpp  PortAudio.cpp  PortAudio.hpp  TestOpusPortAudio  build.sh  main.cpp
inc/client/: BabelClient.hpp  BabelWindow.hpp  PortAudio.hpp  UdpClient.hpp  Ui_BabelWindow.hpp
inc/server/: Handler.hpp  Network.hpp  Server.hpp
src/client/: BabelClient.cpp  BabelWindow.cpp  PortAudio.cpp  UdpClient.cpp  Ui_BabelWindow.cpp  main.cpp
src/server/: Handler.cpp  Network.cpp  Server.cpp  main.cpp
